--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rashi Agrawal</title>
     <!-- <script src="https://kit.fontawesome.com/0d28055ef4.js" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" type="text/css" href="cowin.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
 
   <body>
