--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  
     <title>Rashi Agrawal</title>
     <!-- <script src="https://kit.fontawesome.com/0d28055ef4.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" type="text/css" href="index.css" />
@@ -15,7 +16,7 @@
           src="logo.jpg"
           height="60"
         />
-        <!-- <i class="fas fa-birthday-cake"></i> --></span
+       </span
       >
       <span class="navbar-items">
         <a href="/" class="nav-item">About</a>
@@ -57,7 +58,7 @@
       </div>
       <div class="item-tile">
         <img
-          src="https://images.livemint.com/img/2020/07/07/600x338/COVAXIN_1594131053568_1594131063758.jpg"
+          src="covaxin.jpg"
           class="s m l item-img"
           class="item-img"
         />
