--- a/test.html
+++ b/test.html
@@ -3,10 +3,52 @@
   <head>
     <title>Rashi Agrawal</title>
     <!-- <script src="https://kit.fontawesome.com/0d28055ef4.js" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="test.css" />
   </head>
 
-  <body>
-    <h1>Test File</h1>
+<body>
+<h2>Final Assessment- Rashi Agrawal</h2>
+    <div class="main">
+        <div class="box1">
+          <div class="c2">
+            <div class="up"></div>
+            <div class="down">
+             <form class="form">
+                <label>Name</label>
+                <input type="text" class="Name" placeholder="Your name" /><br />
+                <label>Email</label>
+                <input type="email" placeholder="abc@gmail.com" /><br />
+              </form>
+            </div>
+          </div>  
+        </div>
+
+        <div class="box2">
+          <div class="c1">
+            <div class="left">1</div>
+            <div class="right">2</div>
+          </div> 
+          <div class="c2">
+          <div class="down2">3</div>
+          </div>
+        </div>
+          
+        <div class="box3">
+         <div class="row">
+          <div class="c3">
+            <div class="left3"></div>
+            <div class="right3"></div> 
+          </div>
+          <div class="c4">
+            <div class="left4"></div>
+            <div class="right4"></div> 
+          </div>
+         </div> 
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <a href= "/" class="footer-item">Go to Top</a>
+    </div>
   </body>
 </html>
